Fix copy's font-size on mobile version

--- a/stylesheets/components/_sideMenu.scss
+++ b/stylesheets/components/_sideMenu.scss
@@ -52,7 +52,7 @@ $max-width: conf($conf-c-sideMenu, max-width);
 
       &:last-child {
         color: initial;
-        font-size: .7em;
+        font-size: .63em;
         text-align: center;
       }
     }
